# superfit

./: .gitignore  LICENSE  LICENSE-MIT  LICENSES.md  README.md  env.yml  pyproject.toml  superfit_config.example.json
assets/: custom_vasf_scaling.csv  custom_vasf_threshold_sweep.csv
dataset/: new_testset.csv  qual_testset.csv  select_superfrustum_partobjaverse.csv  select_superfrustum_toys4k.csv
job_scripts/: all_toy4k.sh  all_toys4k.sh  batch_ablation0_v6_videos.sh  comparison.sh
notebooks/: mesh_curvature.ipynb  msd.ipynb  primitive_designs.ipynb
notes/: custom_vasf_cuda.md  dataset.md  post_submission.md  primitives.md
scripts/: __init__.py  benchmark_custom_vasf_scaling.py  eval.py  fit_texture.py  generate_cache.py  generate_on_testset.py  generate_opt_video.py  mesh_to_assembly.py  mesh_to_pa.py  pointcloud_to_mesh.py  test_configs.py  testset_eval.py  testset_fit_partwise.py  testset_fit_primitives.py  testset_fit_textures.py  testset_opt_video.py
scripts/visualize/: __init__.py  generate_opt_video.py  testset_opt_video.py
superfit/: __init__.py  requirements.txt
superfit/algos/: decompose_msd.py  decompose_others.py  estimate_init_params.py  eval.py  eval_tools.py  kmeans.py  prim_initialize.py  prune.py  resfit.py
superfit/custom_ops/: README.md  __init__.py  benchmark_varaxis_sf_cuda.py  build.py  varaxis_sf_cuda.py
superfit/custom_ops/csrc/: varaxis_sf.cpp  varaxis_sf_kernel.cu
superfit/mat_opt/: __init__.py  color_utils.py  optim.py  prim_eval.py  utils.py
superfit/optim/: __init__.py  compile_function.py  curvature.py  entry.py  expr_conversion.py  fast_opt.py  fast_opt_new.py  losses.py  main_opt.py  measures.py  param_conversion.py  primitive_registry.py  semantic_loss.py  utils.py
superfit/optim/param_conversion/: __init__.py  conversion.py  other_handler.py  sf_ext_handler.py  sf_handler.py  sg_handler.py  spproto_handler.py  utils.py
superfit/shader/: __init__.py  custom_evaluate.py  custom_prim.py  old_primitives.py  primitives.py  shader_packed.py  var_axis.py
superfit/symbolic/: __init__.py  base.py  batched.py  old_primitives.py  primitives.py  rotation_functions.py  symbolic_types.py  utils.py  var_axis.py
superfit/torch_compute/: __init__.py  batched_others.py  batched_primitives.py  batched_sf.py  batched_sg.py  batched_spproto.py  compile_friendly.py  other_functions.py  primitives.py  super_geon.py
superfit/utils/: config.py  constants.py  editing.py  io.py  logger.py  mesh_preprocess.py  mesh_sdf.py  render_seq.py  stats.py  visualization.py
superfit/visualize/: __init__.py  config.py  render_seq.py  video_generators.py
tests/custom_ops/: test_custom_vasf_optim_integration.py  test_varaxis_sf_cuda.py
