[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superfit"
version = "0.1.0"
description = "Primitive assembly fitting pipeline for CVPR SuperFit paper artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "SuperFit Authors" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "sympy>=1.12",
  "torch>=2.7",
  "trimesh>=4.0",
  "pot>=0.9",
  "matplotlib>=3.7",
  "distinctipy>=1.3",
  "connected-components-3d>=3.12",
  "libigl>=2.5.1",
  "fastsweep>=0.2.0",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]
render = [
  "jinja2>=3.1",
  "moderngl>=5.10",
  "moderngl-window>=2.4",
  "plotly>=5.22",
]

[project.scripts]
superfit-check-setup = "scripts.check_setup:main"
superfit-fit-testset = "scripts.testset_fit_primitives:main"
superfit-mesh-to-pa = "scripts.mesh_to_pa:main_shape_wise"
superfit-eval-testset = "scripts.testset_eval:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["superfit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
