[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superfit"
version = "0.1.0"
description = "Residual primitive fitting of 3D shapes with SuperFrusta."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Adobe-Research-License AND MIT"
license-files = ["LICENSE", "LICENSE-MIT", "LICENSES.md"]
authors = [{ name = "SuperFit Authors" }]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "sympy>=1.12",
  "torch>=2.7",
  "trimesh>=4.0",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "geolipi>=0.1",
  "sysl3d>=0.1",
  "connected-components-3d>=3.12",
  "libigl>=2.5.1",
  "fastsweep>=0.2.0",
  "drjit>=1.0",
  "distinctipy>=1.3",
  "pot>=0.9",
]

[project.optional-dependencies]
eval = [
  "faiss-gpu>=1.7",
]
semantic = [
  "faiss-gpu>=1.7",
  "lightning>=2.0",
]
render = [
  "imageio>=2.31",
  "imageio-ffmpeg>=0.4",
  "jinja2>=3.1",
  "moderngl>=5.10",
  "moderngl-window>=2.4",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[project.scripts]
superfit-fit-testset = "scripts.testset_fit_primitives:cli_main"
superfit-mesh-to-pa = "scripts.mesh_to_assembly:cli_main"
superfit-eval-testset = "scripts.testset_eval:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"superfit.custom_ops" = ["README.md", "csrc/*.cpp", "csrc/*.cu"]

[tool.setuptools.packages.find]
where = ["."]
include = ["superfit*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
